--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,9 @@
   --footer-height-size: 96px;
 }
 /* COMMON STYLES */
-* {
+*,
+::after,
+::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -45,16 +47,6 @@ section {
   padding: var(--header-height-size) 24px var(--footer-height-size) 24px;
 }
 
-.about__title,
-.services__title,
-.contact__title {
-  font-size: 2rem;
-  text-align: center;
-  color: var(--primary-color);
-  margin-bottom: 32px;
-  animation: fadeIn 1s ease forwards;
-}
-
 .hero__button,
 .header__link {
   transition: all 0.3s ease-in-out;
@@ -72,6 +64,7 @@ section {
 }
 
 .container {
+  width: 100%;
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -85,6 +78,43 @@ section {
   justify-content: center;
   align-items: center;
   height: 100%;
+}
+
+.about__title,
+.services__title,
+.contact__title {
+  width: 100%;
+  position: relative;
+  font-size: 2rem;
+  text-align: center;
+  color: var(--primary-color);
+  margin-bottom: 32px;
+  animation: fadeIn 1s ease forwards;
+}
+
+.about__title::before,
+.services__title::before,
+.contact__title::before,
+.about__title::after,
+.services__title::after,
+.contact__title::after {
+  content: "";
+  display: block;
+  width: 40%;
+  border: 2px solid var(--border-color);
+  position: absolute;
+  bottom: 22px;
+}
+.about__title::before,
+.services__title::before,
+.contact__title::before {
+  left: 0;
+}
+
+.about__title::after,
+.services__title::after,
+.contact__title::after {
+  right: 0;
 }
 
 .animated {
@@ -153,6 +183,7 @@ section {
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .hero__title,
@@ -174,7 +205,7 @@ section {
 
 .hero__button {
   display: inline-block;
-  padding: 12px 36px;
+  padding: 16px 54px;
   background-color: var(--secondary-color);
   color: var(--white-color);
   font-size: 1rem;
@@ -208,19 +239,38 @@ section {
   margin: 0 auto;
   max-width: 600px;
   color: var(--main-text-color);
+  margin-bottom: var(--gap-size);
 }
 
+.about__content {
+  width: 100%;
+  display: flex;
+  gap: 60px;
+  flex-wrap: wrap;
+}
+
+.about__item {
+  display: flex;
+  flex-basis: calc((100% - 60px) / 2);
+  gap: var(--gap-size);
+}
+
+.about__item-img {
+  height: 484px;
+  border-radius: 8px 8px 8px 156px;
+  box-shadow: -16px 16px 0 0 var(--main-bg-color),
+    -16px 16px 0 2px var(--border-color);
+}
 /* SERVICES SECTION STYLES */
 
 .services__list {
   display: flex;
-  gap: 20px;
-  justify-content: center;
+  flex-wrap: wrap;
+  gap: 26px;
 }
 
 .services__item {
-  flex-shrink: 1;
-  flex-basis: calc((100% - 20px) / 3);
+  flex-basis: calc((100% - 52px) / 3);
   height: 300px;
   text-align: center;
   background-color: var(--white-color);
@@ -228,6 +278,7 @@ section {
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
 }
 
 .services__item:hover {
@@ -251,11 +302,8 @@ section {
   gap: 16px;
 }
 
-.contact__info {
-  /* flex-grow: 2; */
-  flex-shrink: 0;
-  /* flex-basis: calc((100% - 16px) / 2); */
-}
+/* .contact__info {
+} */
 
 .contact__text {
   margin: 12px 0;
@@ -265,7 +313,6 @@ section {
 
 .contact__form {
   flex-grow: 1;
-  flex-basis: calc((100% - 16px) / 2);
   display: flex;
   flex-direction: column;
   gap: 16px;
