add .scss files

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@
   text-decoration: none;
   color: inherit;
   border: none;
+  outline: none;
 }
 
 body {
@@ -33,6 +34,7 @@ body {
   height: 100%;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
+  overflow: hidden;
 }
 
 h1,
@@ -41,26 +43,44 @@ h3 {
   margin-bottom: 16px;
 }
 
-section {
+button:disabled {
+  cursor: not-allowed;
+  opacity: 0.6;
+  background-color: lightgray;
+}
+
+.btn {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
+}
+
+.btn:hover {
+  background-color: var(--secondary-color);
+}
+
+.btn:active {
+  transform: scale(0.98);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.hero,
+.about,
+.services,
+.contact {
+  min-height: 100vh;
   height: 100vh;
   scroll-snap-align: start;
   padding: var(--header-height-size) 24px var(--footer-height-size) 24px;
-}
-
-.hero__button,
-.header__link {
-  transition: all 0.3s ease-in-out;
+  overflow: hidden;
 }
 
 .header__link:hover > i,
 .services__icon:hover {
   transform: rotate(10deg) scale(1.1);
-}
-
-.hero__button:active,
-.contact__button:active {
-  transform: scale(0.98);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .container {
@@ -119,13 +139,24 @@ section {
 
 .animated {
   opacity: 0;
-  transform: translateY(30px);
-  transition: opacity 0.6s ease, transform 0.6s ease;
+  transform: none;
+  /* transform: translateY(30px); */
+  /* transition: opacity 0.6s ease, transform 0.6s ease; */
 }
 
 .animated.visible {
   opacity: 1;
   transform: translateY(0);
+}
+
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
 }
 
 /* HEADER SECTION STYLES */
@@ -145,9 +176,11 @@ section {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: var(--gap-size);
 }
 
 .header__logo {
+  flex-grow: 1;
   font-size: 1.5rem;
   font-weight: bold;
   color: var(--primary-color);
@@ -173,6 +206,11 @@ section {
   color: var(--primary-color);
   transition: transform 0.3s ease;
 }
+
+.header__button-call {
+  padding: 8px 16px;
+}
+
 /* HERO SECTION STYLES */
 .hero {
   background-color: var(--primary-color);
@@ -210,6 +248,7 @@ section {
   color: var(--white-color);
   font-size: 1rem;
   border-radius: 8px;
+  transition: background-color 0.3s, color 0.3s, transform 0.3s;
 }
 
 .hero__button:hover {
@@ -260,6 +299,13 @@ section {
   border-radius: 8px 8px 8px 156px;
   box-shadow: -16px 16px 0 0 var(--main-bg-color),
     -16px 16px 0 2px var(--border-color);
+}
+
+.about__icon {
+  font-size: 2rem;
+  color: var(--primary-color);
+  margin-bottom: 12px;
+  transition: transform 0.3s ease;
 }
 /* SERVICES SECTION STYLES */
 
@@ -334,13 +380,7 @@ section {
 }
 
 .contact__button {
-  background-color: var(--primary-color);
-  color: var(--white-color);
-  padding: 12px 24px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background-color 0.3s;
+  padding: 12px 0;
 }
 
 .contact__button:hover {
@@ -382,6 +422,128 @@ section {
 
 .footer__social-link i:hover {
   color: var(--secondary-color);
+}
+
+/* MODAL WINDOW STYLES */
+.backdrop {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+  padding: 16px 0;
+  transition: opacity 0.3s, visibility 0.3s;
+  z-index: 1000;
+}
+
+.backdrop.is-hidden {
+  /* display: none;  */
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  width: 100%;
+  max-width: 680px;
+  height: 100%;
+  max-height: 680px;
+  background-color: var(--main-bg-color);
+  border-radius: 24px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  padding: 24px;
+  overflow-y: auto;
+}
+
+.modal__button-close {
+  background-color: transparent;
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  font-size: 2rem;
+  cursor: pointer;
+  transition: color 0.3s, transform 0.3s;
+}
+
+.modal__button-close:hover {
+  color: var(--primary-color);
+}
+
+.modal__button-close:active {
+  transform: scale(0.9);
+}
+
+.modal__form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding-top: 16px;
+}
+
+.modal__input {
+  width: 100%;
+  padding: 16px 24px;
+  border: 1px solid var(--border-color);
+  border-radius: 8px;
+  font-size: 1rem;
+  font-family: inherit;
+  background-color: transparent;
+}
+
+.modal__checkbox-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  position: relative;
+}
+
+.modal__checkbox {
+  appearance: none;
+}
+
+.modal__label-checkbox::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 24px;
+  width: 20px;
+  height: 20px;
+  font-size: 1.5rem;
+  border: 2px solid var(--border-color);
+  padding: 2px;
+  margin-top: 2px;
+}
+
+.modal__checkbox:checked + .modal__label-checkbox::before {
+  background-color: var(--primary-color);
+}
+
+.modal__button-call {
+  display: block;
+  padding: 8px 64px;
+  margin: 16px auto;
+}
+
+.modal__terms {
+  max-width: 230px;
+  text-align: center;
+  font-size: 0.8rem;
+}
+
+.modal__button-call:hover {
+  background-color: var(--secondary-color);
 }
 
 /* MEDIA QUERIES */
