--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -51,15 +51,15 @@ h3 {
   margin: 0 auto;
 }
 
-.hero .container,
-.about .container,
-.services .container,
-.contact .container {
+.hero__container,
+.about__container,
+.services__container,
+.contact__container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: calc(100vh - var(--header-height-size) - var(--footer-height-size));
 }
 
 .about__title,
