--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -11,7 +11,7 @@
     z-index: 1000;
   }
   
-  .header .container {
+  .header__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
